--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -4,9 +4,9 @@ data:
     - groups:
       - system:bootstrappers
       - system:nodes
-      rolearn: arn:aws:iam::982897313602:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-PHQK7A0KJNSQ
+      rolearn: arn:aws:iam::982897313602:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-1OP5B1V299Q1W
       username: system:node:{{EC2PrivateDNSName}}
-      - rolearn: arn:aws:iam::982897313602::role/UdacityFlaskDeployCBKubectlRole
+    - rolearn: arn:aws:iam::982897313602:role/UdacityFlaskDeployCBKubectlRole
       username: build
       groups:
         - system:masters
@@ -14,9 +14,9 @@ data:
     []
 kind: ConfigMap
 metadata:
-  creationTimestamp: "2020-03-07T19:32:52Z"
+  creationTimestamp: "2020-03-08T04:02:08Z"
   name: aws-auth
   namespace: kube-system
-  resourceVersion: "873"
+  resourceVersion: "761"
   selfLink: /api/v1/namespaces/kube-system/configmaps/aws-auth
-  uid: 6f9f3be9-60aa-11ea-906e-0285ccc87cb4
+  uid: 94cdfa6c-60f1-11ea-9c3f-0685fcd0e19e
