followed the instructions

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,12 @@ phases:
       - apt-get update && apt-get -y install jq python3-pip python3-dev && pip3 install --upgrade awscli
   pre_build:
       commands:
+        - pip install --upgrade pip
+        - pip install flask
+        - pip install pyjwt
+        - pip install gunicorn
+        - pip install pytest
+        - python test_main.py
         - TAG="$REPOSITORY_NAME.$REPOSITORY_BRANCH.$ENVIRONMENT_NAME.$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
         - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' simple_jwt_api.yml
         - $(aws ecr get-login --no-include-email)
@@ -35,3 +41,6 @@ phases:
       - ls
 artifacts:
   files: build.json
+env:
+  parameter-store:         
+    JWT_SECRET: JWT_SECRET
