--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,8 +20,8 @@
           - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' simple_jwt_api.yml
           - $(aws ecr get-login --no-include-email)
           - export KUBECONFIG=$HOME/.kube/config
-          - pip3 install --upgrade pip
-          - pip3 install -r requirements.txt
+          - pip install --upgrade pip
+          - pip install -r requirements.txt
           - pytest test_main.py
           
     build:
