--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,8 @@ env:
     JWT_SECRET: JWT_SECRET
 phases:
   install:
+    runtime-versions:
+      python: 3.7
     commands:
       - curl -sS -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.14.6/2019-08-22/bin/linux/amd64/aws-iam-authenticator
       - curl -sS -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.14.6/2019-08-22/bin/linux/amd64/kubectl
@@ -20,7 +22,7 @@ phases:
       - easy_install pip
       - pip3 install --upgrade awscli
       - ln -sf /usr/bin/python3.5 /usr/local/bin/python3
-  pre_build
+  pre_build:
       commands:
         - TAG="$REPOSITORY_NAME.$REPOSITORY_BRANCH.$ENVIRONMENT_NAME.$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
         - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' simple_jwt_api.yml
