--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -1,22 +1,22 @@
 apiVersion: v1
 data:
   mapRoles: |
-    - rolearn: arn:aws:iam::118102576004:role/UdacityFlaskDeployCBKubectlRole
-    username: build
-    groups:
-      - system:masters
     - groups:
       - system:bootstrappers
       - system:nodes
-      rolearn: arn:aws:iam::118102576004:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-EAFNI16YJPII
+      rolearn: arn:aws:iam::118102576004:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-18RZT36EBLQS4
       username: system:node:{{EC2PrivateDNSName}}
+    - groups:
+      - system:masters
+      rolearn: arn:aws:iam::118102576004:role/UdacityFlaskDeployCBKubectlRole
+      username: build
   mapUsers: |
     []
 kind: ConfigMap
 metadata:
-  creationTimestamp: "2020-06-27T07:56:16Z"
+  creationTimestamp: "2020-06-27T14:52:25Z"
   name: aws-auth
   namespace: kube-system
-  resourceVersion: "2373"
+  resourceVersion: "931"
   selfLink: /api/v1/namespaces/kube-system/configmaps/aws-auth
-  uid: a53743c3-9cf1-4b59-a235-980338f89c3d
+  uid: 7950ee09-6cfa-4cd5-802b-3824caca939f
