--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -6,10 +6,10 @@ data:
       - system:nodes
       rolearn: arn:aws:iam::118102576004:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-18RZT36EBLQS4
       username: system:node:{{EC2PrivateDNSName}}
-    - groups:
-      - system:masters
-      rolearn: arn:aws:iam::118102576004:role/UdacityFlaskDeployCBKubectlRole
+    - rolearn: arn:aws:iam::118102576004:role/UdacityFlaskDeployCBKubectlRole
       username: build
+      groups:
+        - system:masters
   mapUsers: |
     []
 kind: ConfigMap
@@ -17,6 +17,6 @@ metadata:
   creationTimestamp: "2020-06-27T14:52:25Z"
   name: aws-auth
   namespace: kube-system
-  resourceVersion: "931"
+  resourceVersion: "1562"
   selfLink: /api/v1/namespaces/kube-system/configmaps/aws-auth
   uid: 7950ee09-6cfa-4cd5-802b-3824caca939f
