--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,8 @@
 ---
 version: 0.2
-
+env:
+ parameter-store:
+   JWT_SECRET: JWT_SECRET
 
 phases:
   install:
@@ -34,7 +36,7 @@ phases:
     commands:
       - docker push $REPOSITORY_URI:$TAG
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --role-arn $EKS_KUBECTL_ROLE_ARN
-      - kubectl apply -f simple_jwt_api.yml 
+      - kubectl apply -f simple_jwt_api.yml
       - printf '[{"name":"simple_jwt_api","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
 artifacts:
   files: build.json
