correct buildspec, after correct file name simple_jwt_api.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -42,7 +42,7 @@ phases:
       - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
       - echo $JWT_SECRET > .env
-      - kubectl apply -f simple-jwt-api.yml
+      - kubectl apply -f simple_jwt_api.yml
       - printf '[{"name":"simple_jwt_api","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
       - pwd
       - ls
