--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -1,15 +1,16 @@
+
 apiVersion: v1
 data:
   mapRoles: |
+    - rolearn: arn:aws:iam::090294738848:role/UdacityFlaskDeployCBKubectlRole
+      username: build
+      groups:
+        - system:masters
     - groups:
       - system:bootstrappers
       - system:nodes
-      rolearn: arn:aws:iam::090294738848:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-N072J9YVAJVF
+      rolearn: arn:aws:iam::090294738848:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-ZJ7Z9EIA7G3H
       username: system:node:{{EC2PrivateDNSName}}
-    - groups:
-      - system:masters
-      rolearn: arn:aws:iam::090294738848:role/UdacityFlaskDeployCBKubectlRole
-      username: perfect
   mapUsers: |
     []
 kind: ConfigMap
