--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ _mailinglist
 docs/_build/
 __pycache__
 .env_file
+.vscode
 
 # Coverage reports
 htmlcov/
@@ -27,3 +28,4 @@ htmlcov/
 # Direnv
 .envrc
 .direnv
+examples
