--- a/buildspec.yml
+++ b/buildspec.yml
@@ -35,6 +35,11 @@ phases:
       - docker push $REPOSITORY_URI:$TAG
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --role-arn $EKS_KUBECTL_ROLE_ARN
       - kubectl apply -f simple_jwt_api.yml 
+      - kubectl set env deployment/simple-jwt-api JWT_SECRET=$JWT_SECRET
       - printf '[{"name":"simple_jwt_api","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
 artifacts:
   files: build.json
+
+env:
+  parameter-store:
+    JWT_SECRET: JWT_SECRET
