--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -2,14 +2,14 @@ apiVersion: v1
 data:
   mapRoles: |
     - groups:
-      - system:
-      - system:masters
-      rolearn: arn:aws:iam::419763087940:role/UdacityFlaskDeployCBKubectRole
-      username: build
+      - system:bootstrappers
+      - system:nodes
+      rolearn: arn:aws:iam::419763087940:role/eksctl-fabulous-rainbow-163254533-NodeInstanceRole-15D7APVR43GDB
+      username: system:node:{{EC2PrivateDNSName}}
 kind: ConfigMap
 metadata:
-  creationTimestamp: "2021-09-24T03:00:42Z"
+  creationTimestamp: "2021-09-25T05:09:10Z"
   name: aws-auth
   namespace: kube-system
-  resourceVersion: "142212"
-  uid: ded4a5c4-3dca-4c3f-9432-fc9c1f1b2e03
+  resourceVersion: "1404"
+  uid: bfabec01-2c5b-49f9-b962-f0452a9c486f
