--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -2,6 +2,10 @@ apiVersion: v1
 data:
   mapRoles: |
     - groups:
+      - system:masters
+      rolearn: arn:aws:iam::419763087940:role/UdacityFlaskDeployCBKubectlRole
+      username: build      
+    - groups:
       - system:bootstrappers
       - system:nodes
       rolearn: arn:aws:iam::419763087940:role/eksctl-fabulous-rainbow-163254533-NodeInstanceRole-15D7APVR43GDB
