--- a/examples/Deploy_Flask_App/deployment.yml
+++ b/examples/Deploy_Flask_App/deployment.yml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: simple-flask
-        image: IMAGE_TAG
+        image: lancer/simple-flask
         securityContext:
           privileged: false
           readOnlyRootFilesystem: false
