--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -17,7 +17,7 @@ Parameters:
   GitSourceRepo:
     Type: String
     Description: GitHub source repository - must contain a Dockerfile and buildspec.yml in the base
-    Default: FSND-Deploy-Flask-App-to-Kubernetes-Using-EKS
+    Default: cd0157-Server-Deployment-and-Containerization
     MinLength: 1
     MaxLength: 100
     ConstraintDescription: You must enter a GitHub repository name
@@ -41,7 +41,7 @@ Parameters:
   GitHubUser:
     Type: String
     Default: SudKul
-    Description: GitHub username or organization
+    Description: rohpal2001
     MinLength: 3
     MaxLength: 100
     ConstraintDescription: You must enter a GitHub username or organization
