--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,23 @@
-pyjwt==1.7.1
-flask==1.1.2
-Jinja2<3.0.0
-MarkupSafe<2.0.0
-ruamel.yaml==0.16.5
-itsdangerous==2.0.1
-werkzeug==2.0.3
+atomicwrites==1.4.1
+attrs==21.4.0
+click==8.1.3
+colorama==0.4.5
+Flask==1.1.2
 gunicorn==20.0.4
+importlib-metadata==4.12.0
+iniconfig==1.1.1
+itsdangerous==2.0.1
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+packaging==21.3
+pluggy==0.13.1
+py==1.11.0
+PyJWT==1.7.1
+pyparsing==3.0.9
 pytest==6.2.2
+ruamel.yaml==0.16.5
+ruamel.yaml.clib==0.2.6
+toml==0.10.2
+typing-extensions==4.3.0
+Werkzeug==2.0.3
+zipp==3.8.1
