--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
       # To download a specific version v1.22.0 on Linux, use:
       - curl -LO https://dl.k8s.io/release/v1.23.6/bin/linux/amd64/kubectl
       # Download the kubectl checksum file
-      #- curl -LO "https://dl.k8s.io/v1.23.6/bin/linux/amd64/kubectl.sha256"
+      - curl -LO "https://dl.k8s.io/v1.23.6/bin/linux/amd64/kubectl.sha256"
       # Validate the kubectl binary against the checksum file
       - echo "$(cat kubectl.sha256)  kubectl" | sha256sum --check
       # Install kubectl
