--- a/buildspec.yml
+++ b/buildspec.yml
@@ -36,6 +36,8 @@ phases:
       - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' simple_jwt_api.yml
       - $(aws ecr get-login --no-include-email)
       - export KUBECONFIG=$HOME/.kube/config
+      - pip3 install -r requirements.txt
+      - python3 -m pytest test_main.py
       - echo `ls -l`
   build:
     commands:
