--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -8,7 +8,7 @@ data:
       username: system:node:{{EC2PrivateDNSName}}
     - groups:
       - system:masters
-      rolearn: arn:aws:iam::<YOUR_ACCOUNT_ID>:role/UdacityFlaskDeployCBKubectlRole
+      rolearn: arn:aws:iam::934693926325:role/UdacityFlaskDeployCBKubectlRole
       username: build
   mapUsers: |
     []
