--- a/buildspec.yml
+++ b/buildspec.yml
@@ -49,7 +49,10 @@ phases:
       - docker push $REPOSITORY_URI:$TAG
       - echo $EKS_CLUSTER_NAME
       - echo $EKS_KUBECTL_ROLE_ARN
-      - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --role-arn $EKS_KUBECTL_ROLE_ARN
+      - aws eks update-kubeconfig --name simple-jwt-api --region 
+        us-east-2
+      - export AWS_ACCESS_KEY_ID=AKIAUTCWLXOA6TM3CASC
+      - export AWS_SECRET_ACCESS_KEY=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
       - kubectl apply -f simple_jwt_api.yml 
       - printf '[{"name":"simple_jwt_api","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
 artifacts:
