--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -4,19 +4,19 @@ data:
     - groups:
       - system:bootstrappers
       - system:nodes
-      - rolearn: arn:aws:iam::223010290173:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-1F6ONU9N31A5G
-      - username: system:node:{{EC2PrivateDNSName}}
+      rolearn: arn:aws:iam::315861220225:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-XZW1SK3L4PZ7
+      username: system:node:{{EC2PrivateDNSName}}
     - groups:
-      - system: masters
-      - rolearn: arn:aws:iam::315861220225:role/UdacityFlaskDeployCBKubectlRole
-      - username: build
+      - system:masters
+      rolearn: arn:aws:iam::<YOUR_ACCOUNT_ID>:role/UdacityFlaskDeployCBKubectlRole
+      username: build
   mapUsers: |
     []
 kind: ConfigMap
 metadata:
-  creationTimestamp: "2022-11-29T20:37:59Z"
+  creationTimestamp: "2022-12-14T10:28:52Z"
   name: aws-auth
   namespace: kube-system
-  resourceVersion: "2037"
+  resourceVersion: "1843"
   selfLink: /api/v1/namespaces/kube-system/configmaps/aws-auth
-  uid: 50eaf5f0-e2e2-4699-a7e1-4311a0c92a09
+  uid: 2a28bf00-a654-47fe-bd40-c69484c7a93d
