add different git branch & added aws account id

--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -24,7 +24,7 @@ Parameters:
 
   GitBranch:
     Type: String
-    Default: master
+    Default: feature/v2
     Description: GitHub git repository branch - change triggers a new build
     MinLength: 1
     MaxLength: 100
